--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@reduxjs/toolkit": "^1.9.0",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.13",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
@@ -30,9 +31,9 @@
     "formidable": "^2.0.1",
     "helmet": "^6.0.0",
     "jose": "^4.11.0",
+    "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
-    "mini-svg-data-uri": "^1.4.4",
     "multer": "^1.4.5-lts.1",
     "next": "13.0.2",
     "nodemailer": "^6.8.0",
