--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint-config-next": "13.0.2",
     "express": "^4.18.2",
     "flash": "^1.1.0",
+    "flowbite": "^1.5.4",
+    "flowbite-react": "^0.3.5",
     "formidable": "^2.0.1",
     "helmet": "^6.0.0",
     "jose": "^4.11.0",
